Changes colour theme

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -50,7 +50,7 @@ body {
   padding: 2em;
 }
 .log-form h2 {
-  color: #5d5d5d;
+  color: #828080;
   font-family: 'open sans condensed';
   font-size: 1.35em;
   display: block;
